objects/vlocity_ins__ProductConfigurationProcedure__c.object
<CustomObject>
    <description>Product configuration procedures are used in rule actions to change the product choices available to users as they quote or order products. The procedures act on attributes to hide them, disable them, require a value for them, assign a specific value to them or constrain the available choices for them.</description>
    <fields>
        <fullName>vlocity_ins__ActionParameters__c</fullName>
        <label>Action Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EntityFilterId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity Filter</label>
        <referenceTo>vlocity_ins__EntityFilter__c</referenceTo>
        <relationshipLabel>Product Configuration Procedures</relationshipLabel>
        <relationshipName>ProductConfigurationProcedures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Configuration Procedures</relationshipLabel>
        <relationshipName>ProductConfigurationProcedures</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Configuration Procedure</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Configuration Procedure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Configuration Procedures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>